--- a/pub.bib
+++ b/pub.bib
@@ -1,3 +1,12 @@
+@inproceedings{OkReconstruct,
+ author = {Jiin Woo and Jungseul Ok and Yung Yi},
+ title = {Iterative Learning of Graph Connectivity from Partially-Observed Cascade Samples},
+ booktitle = {to appear in MobiHoc 2020},
+ year = {2020},
+ publisher = {ACM}
+} 
+
+
 @Article{Kim2019,
 author="Kim, Dongwoo
 and Graham, Timothy
